# idot-lang

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  EARLY_ADOPTERS.md  GRAPHICS_GUIDE.md  Idot.cpp  Idot.h  LICENSE  Lang.toml  README.md  err.txt  idotc.py  stderr.txt  stderr_debug.txt  stdout.txt  stdout_debug.txt  test.idot  test_gen.ido  test_simple.ido  test_write_str_to_file.ido
.github/scripts/: lang-bar.sh  update_adopters.js
.github/workflows/: ci.yml  release.yml  rust-multi-platform.yml  self-host.yml  update-adopters.yml  update-lang-bar.yml
compiler/: Cargo.toml  README.TXT  matrix.toml
compiler/self/: ast.ido  codegen.ido  lexer.ido  main.ido  parser.ido  semantic.ido  test_gen.ido
compiler/self/src/: lexer.rs  lib.rs  main.rs  parser.rs
compiler/self/src/codegen/: c.rs
compiler/src/: ast.ido  ast.rs  cli.ido  cmd_add.ido  cmd_bench.ido  cmd_build.ido  cmd_init.ido  cmd_new.ido  cmd_run.ido  cmd_test.ido  cmd_update.ido  cmd_vendor.ido  codegen.ido  compile.ido  diagnostics.rs  environment.rs  interpreter.rs  lexer.ido  lexer.rs  lib.rs  main.ido  main.rs  manifest.ido  parser.ido  parser.rs  semantic.ido  semantic.rs  session.rs  test_gen.ido  token.rs  util.ido  value.rs
compiler/src/backend/: aot_backend.rs  c_backend.rs  mod.rs  native_backend.rs
compiler/src/codegen/: c.rs
compiler/tests/: compiler_tests.rs  runtime_tests.rs
data/: early_adopters.json
docs/: architecture.md  language-tour.md  usage.md
examples/: comptime.idot  control_flow.ido  control_flow.idot  defer_example.idot  defer_lifo.idot  fib.id  fib.ido  fib.idot  for_loop.ido  for_loop.idot  graphics_advanced.idot  graphics_demo.idot  hello.id  hello.ido  hello.idot  math.ido  math.idot  pointers.idot  pointers_mut.idot  sample.idot  structs.ido  structs.idot  types.ido  types.idot  when.idot
idot-graphics/: Cargo.toml
idot-graphics/src/: lib.rs
idot-runtime/: Cargo.toml
idot-runtime/src/: lib.rs
include/Idot/: Ast.h  Diagnostics.h  Environment.h  Interpreter.h  Lexer.h  Parser.h  Runner.h  Token.h  Value.h
lib/: std.ido
lib/std/: c.ido  collections.ido  io.ido  math.ido  mem.ido
matrix/: Cargo.toml  README.md
matrix/src/: commands.rs  deps.rs  main.rs  manifest.rs
scripts/: install.ps1  install.sh
smoke-test/: matrix.toml
src/: Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Runner.cpp  Value.cpp  ast.py  codegen.py  codegen.rs  lexer.py  lexer.rs  lib.rs  main.cpp  main.rs  parser.py  parser.rs  spec.py
test-project/: matrix.toml
test-std-lib/: matrix.toml
test-std-lib/src/: main.ido  test_c.ido  test_collections.ido  test_io.ido  test_math.ido  test_mem.ido
tests/: IdotTests.cpp  run_tests.py  test_generics.ido  test_imports.ido  test_struct_generics.ido
