[package]
name = "idot"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift-codegen = "0.131.0"
cranelift-frontend = "0.131.0"
cranelift-jit = "0.131.0"
cranelift-module = "0.131.0"
cranelift-native = "0.131.0"
idot-graphics = { path = "../idot-graphics" }

[[bin]]
name = "idot"
path = "src/main.rs"

[[bin]]
name = "idotc"
path = "src/bin/idotc.rs"
